--- a/client/css/layouts/sidebar.css
+++ b/client/css/layouts/sidebar.css
@@ -14,6 +14,13 @@
   }
 }
 
+.sidebar-nav-ita {
+  color: $text-light;
+  margin: 0;
+  padding: 2px auto 6px 0;
+  text-transform: uppercase;
+}
+
 /* Lists */
 .sidebar-nav-items {
   @for $i from 0 to 4 {
@@ -36,6 +43,7 @@
 
       /* Add identation and border for level 2 and above */
       @if $i > 1 {
+        font-size: $size-normal;
         border-left: calc(3px - $i + 1) solid $border;
         margin: 6px 3px 6px;
         padding-left: calc(15px - $i * 2);
@@ -59,5 +67,5 @@
 .sidebar {
   /* ~16px */
   font-size: 1.142857em;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
