--- a/client/css/layouts/index.css
+++ b/client/css/layouts/index.css
@@ -1,5 +1,6 @@
 @import "header";
 @import "conceptual";
 @import "footer";
-@import "reference";
+@import "hub";
+/*@import "reference";*/
 @import "sidebar";
