Done with hub page

--- a/client/css/base/grid.css
+++ b/client/css/base/grid.css
@@ -1,8 +1,15 @@
 .column {
-	flex: 1 1 auto;
+	flex-basis: 0;
+	flex-grow: 1;
+	flex-shrink: 1;
 	padding: 10px;
 
-	/* 12 grids */
+	&.is-one-third,
+	&.is-one-third-tablet {
+		flex: none;
+		width: 33.3333%;
+	}
+
 	@for $i from 1 to 11 {
 		&.is-$(i) {
 			flex: none;
@@ -12,57 +19,19 @@
 			margin-left: calc($i / 12 * 100)%;
 		}
 	}
-
-	& {
-		@mixin mobile {
-
-		}
-
-		@mixin tablet {
-			&.is-one-third,
-			&.is-one-third-tablet {
-				border: solid 1px red;
-				width: 33.3333%;
-			}
-
-			@for $i from 1 to 11 {
-				$.is-$(i)-tablet {
-					flex: none;
-					width: calc($i / 12 * 100%);
-				}
-				$.is-offset-$(i)-tablet {
-					margin-left: calc($i / 12 * 100%);
-				}
-			}
-		}
-		@mixin desktop {
-
-		}
-	}
 }
 
-/* Container */
 .columns {
-	margin-top: -10px;
-	margin-right: -10px;
+	display: flex;
+	margin: -10px -10px auto -10px;
 	&:last-child {
 		margin-bottom: -10px;
 	}
 	&:not(:last-child) {
 		margin-bottom: 10px;
 	}
+	
 	&.is-multiline {
 		flex-wrap: wrap;
-	}
-	/* Responsive */
-	& {
-		@mixin tablet {
-			&:not(.is-desktop) {
-				display: flex;
-			}
-		}
-		@mixin desktop {
-			display: flex;
-		}
 	}
 }
