--- a/client/css/layouts/index.css
+++ b/client/css/layouts/index.css
@@ -1,6 +1,7 @@
 @import "header";
 @import "conceptual";
 @import "footer";
+@import "hero";
 @import "hub";
 /*@import "reference";*/
 @import "sidebar";
