--- a/client/css/config/variables.css
+++ b/client/css/config/variables.css
@@ -17,7 +17,8 @@ $yellow:        #e8b811;
 $orange:        #d83b01;
 $red:           #e81123;
 $teal:          #008272;
-$purple:        #5c2d91;
+/*$purple:        #5c2d91;*/
+$purple:        #383278;
 
 
 /* Typography */
