--- a/client/css/utilities/misc.css
+++ b/client/css/utilities/misc.css
@@ -1,4 +1,18 @@
 /* All other useful elements */
+
+@define-mixin circle $size: 16px, $width: 2px, $color: $border {
+  @mixin unselectable;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  border: $width solid $color;
+  border-radius: 290486px; /* Set a ridiculous radius to prevent display quirks */
+  height: calc($size * 2);
+  position: relative;
+  text-align: center;
+  vertical-align: top;
+  width: @height;
+}
+
 @define-mixin close $size: 12px {
   @mixin unselectable;
   -moz-appearance: none;
