--- a/client/css/config/settings.css
+++ b/client/css/config/settings.css
@@ -1,55 +1,57 @@
 /* Color Table */
-$primary: $blue;
-$primary-invert: $mid-blue; /* TODO: Could use postcss-color-func to invert the color */
+$primary:           $blue;
+$primary-invert:    $mid-blue; /* TODO:    Could use postcss-color-func to invert the color */
 
-$callout: $grey-darker;
-/*$callout-invert: invert($callout);*/
-$note: $blue;
-$important: $yellow;
-$error: $red;
+$callout:           $grey-darker;
+/*$callout-invert:  invert($callout);*/
 
-$body-background: $grey-lightest;
-$background: $grey-lighter;
+$info:              $azure-blue;
+$note:              $blue;
+$important:         $yellow;
+$error:             $red;
+
+$body-background:   $grey-lightest;
+$background:        $grey-lighter;
 
 $background-invert: $grey-darker; /* TODO: Could use postcss-color-func to invert the color */
 
-$border: $grey-light;
-$border-hover: $grey;
-$border-visited: $grey-lighter;
+$border:            $grey-light;
+$border-hover:      $grey;
+$border-visited:    $grey-lighter;
 
 /* Text */
-$text: $grey-darker;
+$text:        $grey-darker;
 
 $text-invert: $grey-lightest; /* TODO: Could use postcss-color-func to invert the color */
-$text-light: $grey;
+$text-light:  $grey;
 $text-strong: $grey-dark;
 
 /* Code */
-$code: $red;
+$code:            $red;
 $code-background: $background;
 
-$pre: $text-invert;
+$pre:             $text-invert;
 $pre-background: $background-invert;
 
 /* Links */
-$link: $primary;
-$link-invert: $primary-invert;
-$link-hover: $azure-blue;
-$link-active: $azure-blue;
+$link:         $primary;
+$link-invert:  $primary-invert;
+$link-hover:   $azure-blue;
+$link-active:  $azure-blue;
 $link-visited: $azure-blue;
 
 /* Controls */
-$control: $text-strong;
-$control-background: $text-invert;
-$control-border: $border;
+$control:                          $text-strong;
+$control-background:               $text-invert;
+$control-border:                   $border;
 
-$control-hover: $link-hover;
-$control-hover-border: $border-hover;
+$control-hover:                    $link-hover;
+$control-hover-border:             $border-hover;
 
-$control-active: $link;
-$control-active-background: $link;
+$control-active:                   $link;
+$control-active-background:        $link;
 $control-active-background-invert: $link-invert;
-$control-active-border: $link;
+$control-active-border:             $link;
 
 /* Typography */
 $primary-font: $font-family-sans-serif;
