--- a/client/css/config/variables.css
+++ b/client/css/config/variables.css
@@ -6,7 +6,8 @@ $grey-dark:     #69707a;
 $grey:          #aeb1b5;
 $grey-light:    #d3d6db;
 $grey-lighter:  #f5f7fa;
-$grey-lightest: #fafcfe;
+/*$grey-lightest: #fafcfe;*/
+$grey-lightest: #fdfdfd;
 $white:         #ffffff;
 
 $blue:          #00a4f3;
