--- a/client/css/elements/title.css
+++ b/client/css/elements/title.css
@@ -29,7 +29,8 @@
 }
 
 .title {
-  color: $text-light;
+  /* color: $text-light; */
+  color: $text;
   font-style: $size-large;
   line-height: 1;
 
@@ -38,6 +39,7 @@
   }
 
   /* Sizes */
+  /* is-7 */
   @mixin title-size 1, $size-1;
   @mixin title-size 2, $size-2;
   @mixin title-size 3, $size-3;
