--- a/client/css/base/generic.css
+++ b/client/css/base/generic.css
@@ -94,6 +94,9 @@ input[type="radio"], {
   vertical-align: baseline;
 }
 
+hr {
+  
+}
 /* Generic Extends */
 @define-mixin block {
   &:not(:last-child) {
