--- a/client/css/components/card.css
+++ b/client/css/components/card.css
@@ -28,6 +28,7 @@
 
 .card-header {
   text-align: center;
+  min-height: 180px;
 }
 
 .card-image {
@@ -57,7 +58,7 @@
   &.is-fixed-height {
     display: flex;
     flex-direction: column;
-    height: 400px;
+    height: 420px;
     justify-content: space-between;
     overflow: hidden;
   }
